# ratelimited-embedder

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/ratelimited_embedder/: __init__.py  cache.py  core.py  langchain_adapter.py  monitoring.py  types.py
tests/: test_cache.py  test_core.py  test_langchain_adapter.py
