[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ratelimited-embedder"
version = "0.1.0"
description = "LangChain 速率控制向量化工具，支持批处理、自动降速、向量缓存"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [
    {name = "oi-star"},
]
keywords = ["langchain", "embedding", "rate-limit", "vector", "faiss"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "faiss-cpu>=1.7.0",
    "tqdm>=4.65.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/oi-star/ratelimited-embedder"
Repository = "https://github.com/oi-star/ratelimited-embedder"
"Bug Tracker" = "https://github.com/oi-star/ratelimited-embedder/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ratelimited_embedder = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
